Fixed tags clipping out of the invite cards, fixed tag placement if description was too short, added dynamic background gradiants to /servers/

--- a/frontend/src/pages/css/InviteDetail.module.css
+++ b/frontend/src/pages/css/InviteDetail.module.css
@@ -53,7 +53,7 @@
 
 .serverIcon {
   position: absolute;
-  bottom: -70px;
+  bottom: -60px;
   left: 80px;
   width: 140px;
   height: 140px;
@@ -263,7 +263,11 @@
 }
 
 .rightColumn {
-  position: absolute;
+  align-self: start;
+  margin-left: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
   top: 100px; /* same as top padding of cardContent */
   right: 40px; /* same as right padding of cardContent */
   width: 260px;
