--- a/frontend/src/pages/css/ServerBrowser.css
+++ b/frontend/src/pages/css/ServerBrowser.css
@@ -381,7 +381,6 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  background-color: #28275b;
   background-size: cover;
   background-position: center;
   color: #111827;
